# linkedmusic-datalake

./: .gitignore  FEDERATED_OPTIMIZATION.md  PROJECT_ORGANIZATION.md  README.md  Why we use Python programing with the package RdfLib,and why we use turtle?.doc  conftest.py  pyproject.toml  queryexperiment_onwebpage&sparql(ongoing).docx
code/nlq2sparql/: .gitignore  FIXTURE_IMPROVEMENTS.md  Makefile  README.md  STATUS.md  __init__.py  arguments.py  cli.py  cli_parser.py  config.json  config.py  debug_client.py  demo.py  prefixes.txt  prompt_builder.py  prompts.py  pyproject.toml  pytest.ini  query_processor.py  requirements.txt  router.py  run_tests.py  test.py  test_poetry.py  test_system.py
code/nlq2sparql/agents/: __init__.py  base.py  example_agent.py  ontology_agent.py  orchestrator.py  router_agent.py  supervisor.py  wikidata_agent.py
code/nlq2sparql/catalog/: concepts.json  loader.py  router_index.thesession.json  router_rules.yml
code/nlq2sparql/debug_prompts/: .gitkeep  prompt_diamm_Find_manuscripts_containing_compositions_by_Josqui_20250714_093926.txt  prompt_diamm_Find_sources_by_John_Doe_20250714_093728.txt  prompt_session_Return_all_entries_in_The_Session_that_took_place__20250714_093812.txt
code/nlq2sparql/examples/: manager_agent_example.py
code/nlq2sparql/integrations/: __init__.py  base_integration.py  gemini_integration.py  wikidata_adapter.py
code/nlq2sparql/ontology/: extract_property_mappings.py  property_mappings.json
code/nlq2sparql/providers/: __init__.py  base.py  chatgpt_client.py  claude_client.py  gemini_client.py
code/nlq2sparql/results/: sparql_20250812_124331.json  sparql_20250812_125304.json
code/nlq2sparql/tests/: README.md  conftest.py  test_agents.py  test_comprehensive.py  test_config.py  test_integration.py  test_parameterized_fixtures.py  test_providers.py  test_public_api.py  test_query_processing.py  test_wikidata_agent.py  test_wikidata_tool.py
code/nlq2sparql/tests_backup/: README.md  __init__.py  conftest.py  run_tests.py  test_config.py  test_providers_modern.py
code/nlq2sparql/tools/: __init__.py  sparql_http.py  wikidata_tool.py
csv2rdf/: QueryExperiment_onWebpage&SPARQL.docx  README.md  csv2rdf_single_subject.py  get_relations.py  pyproject.toml  reconciled_cantus.csv  reconciled_mb_recording.csv  reconciled_mb_recording2.csv  relations_mapping_cantus.json  relations_mapping_mb.json
csv2rdf/MusicBrainz/: AccountForReconciliation.ttl  AccountForReconciliation_MusicBrainz.ttl  area.csv  event.csv  instrument.csv  label.csv  mapping.json  reconciliation_details.md  recording.csv
csv2rdf/acousticbrainz/: ab_reconcile.ttl  ab_reconciled.ttl  ab_reconciliation_details.md  mapping.json  out_rdf.ttl
csv2rdf/cantus/: cantus-csv.csv  mapping.json  out_rdf.ttl
csv2rdf/documentation_HowToConvertCSV2RDFIntoVirtuoso/: .~cumentation_CSV2RDF_Virtuoso2024Nov.docx  Documentation_CSV2RDF_Virtuoso.docx  Documentation_CSV2RDF_Virtuoso2024Nov.docx
csv2rdf/simssa/: mapping.json  mw_reconciled_WikiID_URI.csv  out_rdf.ttl  sc_reconciled_WikiID_URI.csv
csv2rdf/thesession/: AccountForReconciliation.ttl  AccountForReconciliation_updated.ttl  events-csv.csv  events.csv  mapping.json  out_rdf.ttl  recordings-csv_onlyForArtist_wiki.xlsx  sessions-csv.csv  sessions.csv  tune-popularity.csv  tunes-popularity.csv
musicbrainz/csv/: README.md  convert_to_csv.py  convert_to_csv_mapper.csv  fetch.py  format_json.py  get_genre.py  json_init.json  musicbrainz_log.md  ontology_dict.json  out.csv  pyproject.toml  reconcile.py  test  untar.py
musicbrainz/csv/data/: area.csv  event.csv  genre.csv  instrument.csv  label.csv  ontology_dict.json  out-csv.csv  recording.csv  test.txt  test2.txt
musicbrainz/csv/openrefine_history/: history_label.json  history_recording.json
musicbrainz/csv/output/: genre.csv  (+3 more)
(+32801 files in other folders)
