[tool.poetry]
name = "linkedmusic-datalake"
version = "0.1.0"
description = ""
authors = ["Yueqiao Zhang <yueqiao.zhang@mail.mcgill.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.0.0"
validators = "^0.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
