[tool.poetry]
name = "linkedmusic-datalake"
version = "0.1.0"
description = ""
authors = ["Yueqiao Zhang <yueqiao.zhang@mail.mcgill.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.0.0"
validators = "^0.33.0"
pandas = "^2.2.2"
urllib3 = "^2.2.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
tqdm = "^4.67.1"
psycopg2-binary = "^2.9.10"
oxrdflib = "^0.4.0"
pycountry = "^24.6.1"
aiohttp = "^3.11.18"
aiofiles = "^24.1.0"
aiolimiter = "^1.2.1"
isodate = "^0.7.2"
google-generativeai = "^0.8.5"
openai = "^1.0.0"
anthropic = "^0.34.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
click = "^8.0.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^7.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
nlq2sparql = "code.nlq2sparql.cli:main"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"