[tool.poetry]
name = "linkedmusic-datalake"
version = "0.1.0"
description = ""
authors = ["Yueqiao Zhang <yueqiao.zhang@mail.mcgill.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.0.0"
validators = "^0.33.0"
pandas = "^2.2.2"
urllib3 = "^2.2.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
tqdm = "^4.67.1"
psycopg2-binary = "^2.9.10"
oxrdflib = "^0.4.0"
pycountry = "^24.6.1"
aiohttp = "^3.11.18"
aiofiles = "^24.1.0"
aiolimiter = "^1.2.1"
isodate = "^0.7.2"
zstandard = "^0.23.0"
tomli = "^2.2.1"
tomli-w = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"